# salsa20-inconsistency

./: Cargo.toml  README.md
src/: main.rs
